adding rajedrapancholi website.

--- a/style.css
+++ b/style.css
@@ -79,13 +79,16 @@ body{
     /* list-style: none; */
     justify-content: space-between;
 }
-#brand{
+#brand a{
     color: aqua;
     font-size: 2rem;
+    cursor: pointer;
 }
 .content{
     margin: auto;
     margin-bottom: 4rem;
+    margin-top: 1.6rem;
+    margin-bottom: 2rem;
     max-width: 80%;
     height: 78vh;
     padding: 2rem;
@@ -117,6 +120,15 @@ footer{
     text-align: center;
     align-items: center;
     display: block;
+}
+.ftr a{
+    text-decoration: none;
+    cursor: pointer;
+    color: aqua;
+}
+.ftr a:focus,
+.ftr a:hover{
+    color: rgb(2, 204, 204);
 }
 .toast{
     overflow: hidden;
